# weld_control_sdk

./: .gitignore  AGENTS.md  README.md
c/: CMakeLists.txt  feature_mask.c  feature_mask.h  main.c  sdk_codec.c  sdk_codec.h  sdk_commands.h  sdk_compat.c  sdk_compat.h  sdk_frame_chunk.h  sdk_version.h
c/payloads/: dashboard.c  dashboard.h  device_info.c  device_info.h  ota.c  ota.h  settings.c  settings.h
docs/: compat_policy.md  protocol_spec_v1.0.md
examples/: README.md
examples/esp_idf_device_test/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp_idf_device_test/components/weld_sdk/: CMakeLists.txt
examples/esp_idf_device_test/main/: CMakeLists.txt  ble_module_at_test.c  ble_module_at_test.h  ble_module_transport.c  ble_module_transport.h  main.c
examples/micropython_device/: README.md  main.py
micropython/: feature_mask.py  sdk_codec.py  sdk_commands.py  sdk_compat.py  sdk_frame_chunk.py  sdk_version.py
micropython/payloads/: dashboard.py  device_info.py  ota.py  settings.py
scripts/: add_wcfw_header.md  add_wcfw_header.py
